Try using single quotes

--- a/.github/workflows/lint_random_files.yml
+++ b/.github/workflows/lint_random_files.yml
@@ -120,50 +120,51 @@ jobs:
         run: |
           name=""
           if [ "${{ github.event.inputs.javascript }}" != "false" ]; then
-            name="${name} -name *.js"
+            name="${name} -name '*.js'"
           fi
           if [ "${{ github.event.inputs.markdown }}" != "false" ]; then
             if [ -n "${name}" ]; then
               name="${name} -o"
             fi
-            name="${name} -name *.md"
+            name="${name} -name '*.md'"
           fi
           if [ "${{ github.event.inputs.json }}" != "false" ]; then
             if [ -n "${name}" ]; then
               name="${name} -o"
             fi
-            name="${name} -name *.json"
+            name="${name} -name '*.json'"
           fi
           if [ "${{ github.event.inputs.repl }}" != "false" ]; then
             if [ -n "${name}" ]; then
               name="${name} -o"
             fi
-            name="${name} -name *.repl"
+            name="${name} -name '*.repl'"
           fi
           if [ "${{ github.event.inputs.r }}" != "false" ]; then
             if [ -n "${name}" ]; then
               name="${name} -o"
             fi
-            name="${name} -name *.R"
+            name="${name} -name '*.R'"
           fi
           if [ "${{ github.event.inputs.c }}" != "false" ]; then
             if [ -n "${name}" ]; then
               name="${name} -o"
             fi
-            name="${name} -name *.c"
+            name="${name} -name '*.c'"
           fi
           if [ "${{ github.event.inputs.typescript }}" != "false" ]; then
             if [ -n "${name}" ]; then
               name="${name} -o"
             fi
-            name="${name} -name *.ts"
+            name="${name} -name '*.ts'"
           fi
           if [ "${{ github.event.inputs.python }}" != "false" ]; then
             if [ -n "${name}" ]; then
               name="${name} -o"
             fi
-            name="${name} -name *.py"
+            name="${name} -name '*.py'"
           fi
+          echo "name: ${name}"
           files=$(find lib/node_modules/@stdlib -type f \( ${name} \) |
             grep -E "${{ github.event.inputs.pattern }}" |
             shuf -n ${{ github.event.inputs.num || 100 }} | tr '\n' ' ')
