--- a/.github/workflows/lint_random_files.yml
+++ b/.github/workflows/lint_random_files.yml
@@ -164,10 +164,9 @@ jobs:
             fi
             name="${name} -name '*.py'"
           fi
-          echo "name: ${name}"
           command="find lib/node_modules/@stdlib -type f \( ${name} \) |
             grep -E '${{ github.event.inputs.pattern }}' |
-            shuf -n ${{ github.event.inputs.num || 100 }} | tr '\n' ' ')
+            shuf -n ${{ github.event.inputs.num || 100 }} | tr '\n' ' '"
           echo "command: ${command}"
           files=$(eval ${command})
           echo "::set-output name=files::$files"
