--- a/.github/workflows/lint_random_files.yml
+++ b/.github/workflows/lint_random_files.yml
@@ -45,7 +45,7 @@ on:
         default: true
       repl:
         type: boolean
-        description: Lint REPL files
+        description: Lint REPL documentation files
         default: true
       r:
         type: boolean
@@ -138,7 +138,7 @@ jobs:
             if [ -n "${name}" ]; then
               name="${name} -o"
             fi
-            name="${name} -name '*.repl'"
+            name="${name} -name '*.repl\.txt'"
           fi
           if [ "${{ github.event.inputs.r }}" != "false" ]; then
             if [ -n "${name}" ]; then
