--- a/.github/workflows/lint_random_files.yml
+++ b/.github/workflows/lint_random_files.yml
@@ -274,6 +274,10 @@ jobs:
         run: |
           files=$(echo "${{ steps.random-files.outputs.files }}" | tr ' ' '\n' | grep -E '\.py$' | tr '\n' ' ')
           if [[ -n "${files}" ]]; then
+            # Install Python dependencies:
+            make install-deps-python
+
+            # Lint Python files:
             make lint-python-files FILES="${files}"
           fi
 
@@ -283,6 +287,10 @@ jobs:
         run: |
           files=$(echo "${{ steps.random-files.outputs.files }}" | tr ' ' '\n' | grep -E '\.R$' | tr '\n' ' ')
           if [[ -n "${files}" ]]; then
+            # Install R dependencies:
+            make install-deps-r
+
+            # Lint R files:
             make lint-r-files FILES="${files}"
           fi
 
@@ -292,6 +300,9 @@ jobs:
         run: |
           # Determine root directory:
           root=$(git rev-parse --show-toplevel)
+
+          # Install Cppcheck:
+          make install-deps-cppcheck
 
           # Define the path to cppcheck configuration file for linting examples:
           cppcheck_examples_suppressions_list="${root}/etc/cppcheck/suppressions.examples.txt"
@@ -332,7 +343,7 @@ jobs:
         run: |
           files=$(echo "${{ steps.random-files.outputs.files }}" | tr ' ' '\n' | grep -E '\.d\.ts$' | tr '\n' ' ')
           if [[ -n "${files}" ]]; then
-            make lint-typescript-declaration-files FILES="${files}"
+            make TYPESCRIPT_DECLARATIONS_LINTER=dtslint lint-typescript-declarations-files FILES="${files}"
           fi
 
       # Lint license headers:
