--- a/.github/workflows/lint_changed_files.yml
+++ b/.github/workflows/lint_changed_files.yml
@@ -188,6 +188,13 @@ jobs:
             make lint-python-files FILES="${files}"
           fi
 
+      # Setup R:
+      - name: 'Setup R'
+        if: success() || failure()
+        uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: '3.5.3'
+
       # Lint R files:
       - name: 'Lint R files'
         if: success() || failure()
