--- a/.github/workflows/lint_random_files.yml
+++ b/.github/workflows/lint_random_files.yml
@@ -283,9 +283,10 @@ jobs:
 
       # Setup R:
       - name: 'Setup R'
+        if: ( github.event.inputs.r != 'false' ) && ( success() || failure() )
         uses: r-lib/actions/setup-r@v2
         with:
-          r-version: '3.5.3' # The R version to download (if necessary) and use.
+          r-version: '3.5.3'
 
       # Lint R files:
       - name: 'Lint R files'
