--- a/.github/workflows/scaffold_pkg_via_pull_request_assignment.yml
+++ b/.github/workflows/scaffold_pkg_via_pull_request_assignment.yml
@@ -74,13 +74,20 @@ jobs:
         uses: actions/checkout@v3
         with:
           # Refers to the branch name of the pull request:
-          ref: 'main'
+          ref: 'develop'
 
           # Refers to the repository name of the pull request:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
 
-          # Limit clone depth to the last 25 commits:
-          fetch-depth: 25
+          # Limit clone depth to the most recent commit:
+          fetch-depth: 1
+
+          # Specify whether to remove untracked files before checking out the repository:
+          clean: true
+
+          # Specify whether to download Git-LFS files:
+          lfs: false
+        timeout-minutes: 10
 
       # Configure git:
       - name: 'Configure git'
