Change name to snakecase

--- a/.github/workflows/scaffold_pkg_via_branch_push.yml
+++ b/.github/workflows/scaffold_pkg_via_branch_push.yml
@@ -17,7 +17,7 @@
 #/
 
 # Workflow name:
-name: Scaffold Package via Push to Branch
+name: scaffold_package_via_push_to_branch
 
 # Workflow triggers:
 on:
