--- a/.github/workflows/lint_random_files.yml
+++ b/.github/workflows/lint_random_files.yml
@@ -63,6 +63,10 @@ on:
         type: boolean
         description: Lint Python files
         default: true
+      fix:
+        type: boolean
+        description: Automatically fix lint errors (if possible) and file a pull request
+        default: false
 
   # Trigger the workflow every 24 hours:
   schedule:
@@ -238,34 +242,41 @@ jobs:
           # Define the path to ESLint configuration file for linting benchmarks:
           eslint_benchmarks_conf="${root}/etc/eslint/.eslintrc.benchmarks.js"
 
+          # Set `FIX` variable to `1` to enable automatic fixing of lint errors, `0` to disable:
+          if [ "${{ github.event.inputs.fix }}" == "true" ]; then
+            FIX=1
+          else
+            FIX=0
+          fi
+
           # Lint JavaScript source files:
           files=$(echo "${{ steps.random-files.outputs.files }}" | tr ' ' '\n' | grep '\.js$' | grep -v -e '/examples' -e '/test' -e '/benchmark' -e '^dist/' | tr '\n' ' ')
           if [[ -n "${files}" ]]; then
-            make lint-javascript-files FAST_FAIL=0 FILES="${files}"
+            make lint-javascript-files FIX="${FIX}" FAST_FAIL=0 FILES="${files}"
           fi
 
           # Lint JavaScript command-line interfaces...
           file=$(echo "${{ steps.random-files.outputs.files }}" | tr ' ' '\n' | grep '\.js$' | grep -E '/bin/cli$' | tr '\n' ' ')
           if [[ -n "${file}" ]]; then
-            make lint-javascript-files FAST_FAIL=0 FILES="${file}"
+            make lint-javascript-files FIX="${FIX}" FAST_FAIL=0 FILES="${file}"
           fi
 
           # Lint JavaScript example files:
           files=$(echo "${{ steps.random-files.outputs.files }}" | tr ' ' '\n' | grep '/examples/.*\.js$' | tr '\n' ' ')
           if [[ -n "${files}" ]]; then
-            make lint-javascript-files FAST_FAIL=0 FILES="${files}" ESLINT_CONF="${eslint_examples_conf}"
+            make lint-javascript-files FIX="${FIX}" FAST_FAIL=0 FILES="${files}" ESLINT_CONF="${eslint_examples_conf}"
           fi
 
           # Lint JavaScript test files:
           files=$(echo "${{ steps.random-files.outputs.files }}" | tr ' ' '\n' | grep '/test/.*\.js$' | tr '\n' ' ')
           if [[ -n "${files}" ]]; then
-            make lint-javascript-files FAST_FAIL=0 FILES="${files}" ESLINT_CONF="${eslint_tests_conf}"
+            make lint-javascript-files FIX="${FIX}" FAST_FAIL=0 FILES="${files}" ESLINT_CONF="${eslint_tests_conf}"
           fi
 
           # Lint JavaScript benchmark files:
           files=$(echo "${{ steps.random-files.outputs.files }}" | tr ' ' '\n' | grep '/benchmark/.*\.js$' | tr '\n' ' ')
           if [[ -n "${files}" ]]; then
-            make lint-javascript-files FAST_FAIL=0 FILES="${files}" ESLINT_CONF="${eslint_benchmarks_conf}"
+            make lint-javascript-files FIX="${FIX}" FAST_FAIL=0 FILES="${files}" ESLINT_CONF="${eslint_benchmarks_conf}"
           fi
 
       # Lint Python files:
@@ -361,3 +372,23 @@ jobs:
           if [[ -n "${files}" ]]; then
             make lint-license-headers-files FILES="${files}"
           fi
+
+      # Create a pull request with the fixes:
+      - name: 'Create pull request'
+        id: cpr
+        uses: peter-evans/create-pull-request@v3
+        with:
+          title: 'Fix lint errors'
+          body: |
+            This PR
+
+            -   fixes lint errors
+
+          commit-message: 'Fix lint errors'
+          committer: 'stdlib-bot <noreply@stdlib.io>'
+          labels: |
+            automated-pr
+          team-reviewers: |
+            stdlib-reviewers
+          branch: 'fix-lint-errors'
+          delete-branch: true
